--- a/layout.css
+++ b/layout.css
@@ -1,5 +1,3 @@
-
-
 body {
     font-family: 'Noto Sans Kannada', sans-serif;
     line-height: 1.6;
@@ -13,7 +11,7 @@ body {
 .landing-page {
     background-color: #e6e6e6;
     color: #000000;
-    padding: 40px 100px 0;
+    padding: 20px 100px 0;  /* Decreased top padding from 40px to 20px */
     text-align: left;
     display: flex;
     flex-direction: column;
@@ -21,14 +19,14 @@ body {
 }
 
 .landing-page h1 {
-    font-size: 3em;
-    margin-bottom: 20px;
+    font-size: 2.5em;
+    margin-bottom: 5px;
     padding-left: 20px;
     padding-right: 20px;
 }
 
 .landing-page .description {
-    font-size: 1.2em;
+    font-size: 1.1em;
     line-height: 1.6;
     padding-left: 20px;
     padding-right: 20px;
@@ -36,7 +34,7 @@ body {
 }
 
 .description {
-    font-size: 1.4em;
+    font-size: 1.2em;
     color: #2b2b2b;
     margin-bottom: 20px;
 }
@@ -113,6 +111,21 @@ footer {
     text-align: center;
     padding: 20px 0;
     font-size: 0.9em;
+}
+
+footer a {
+    text-decoration: none;
+    color: #ffcc00; /* Change this to your desired color */
+}
+
+footer a:hover {
+    color: #ff9900; /* Change this to your desired hover color */
+}
+
+footer ul {
+    list-style-type: none;
+    padding: 0; /* Optional: Remove default padding */
+    margin: 0; /* Optional: Remove default margin */
 }
 
 /* Responsive design */
